corpus/c/syntax/case-01/snapshots/gcc15/dual_sink_structured/render.verbose.txt
error: [syntax] syntax error @ src/main.c:2:13
help: fix the first parser error at the user-owned location
want: ;
near: }} token
| src/main.c:2:13
|     return 0
|             ^
suggested edit: insert ';' at src/main.c:2:13
debug: rule_id=rule.family.syntax.phase_or_message
debug: matched_conditions=message_contains=expected, message_contains=before, phase=parse
other errors:
  - src/main.c:2:13: error: syntax error
details: --formed-explain | raw: --formed-raw